[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Fonts/vcr_osd_mono/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://intro.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[node name="intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -216.0
margin_right = 1280.0
color = Color( 0.329412, 0.329412, 0.329412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -633.0
margin_top = 223.0
margin_right = 588.0
margin_bottom = 347.0
custom_fonts/font = SubResource( 1 )
text = "Once... in Outer Space."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 4.5
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 4.5

[node name="Timer3" type="Timer" parent="."]
wait_time = 4.5

[node name="Timer4" type="Timer" parent="."]
wait_time = 4.5

[node name="Timer5" type="Timer" parent="."]
wait_time = 4.5

[node name="Timer6" type="Timer" parent="."]
wait_time = 4.5

[node name="Timer7" type="Timer" parent="."]
wait_time = 4.5
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="Timer5" to="." method="_on_Timer5_timeout"]
[connection signal="timeout" from="Timer6" to="." method="_on_Timer6_timeout"]
[connection signal="timeout" from="Timer7" to="." method="_on_Timer7_timeout"]
